<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
    </parent>

    <groupId>momomomo.dungeonwalker</groupId>
    <artifactId>dungeon-walker-engine</artifactId>
    <name>Dungeon Walker Engine Parent</name>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <dungeon-walker-commons.version>0.0.1-SNAPSHOT</dungeon-walker-commons.version>
        <dungeon-walker-spring-commons.version>0.0.1-SNAPSHOT</dungeon-walker-spring-commons.version>
        <dungeon-walker-contracts.version>1.0-SNAPSHOT</dungeon-walker-contracts.version>

        <pekko.version>1.4.0</pekko.version>
        <pekko-persistence-r2dbc.version>1.1.0</pekko-persistence-r2dbc.version>
        <r2dbc-postgresql.version>1.1.1.RELEASE</r2dbc-postgresql.version>

        <apache-commons-lang.version>3.20.0</apache-commons-lang.version>
        <postgres.version>42.7.3</postgres.version>
        <noexception.version>1.9.1</noexception.version>
        <noexception-slf4j.version>1.0.2</noexception-slf4j.version>
        <jib.version>3.5.1</jib.version>

        <testcontainers.version>1.21.4</testcontainers.version>
    </properties>

    <modules>
        <module>engine-domain</module>
        <module>engine-core</module>
        <module>engine-transport</module>
        <module>engine-startup</module>
    </modules>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib.version}</version>
                <configuration>
                    <from>
                        <image>eclipse-temurin:25-jre</image>
                    </from>
                    <to>
                        <image>alejoceballos/dungeon-walker-engine:v1</image>
                    </to>
                    <container>
                        <mainClass>momomomo.dungeonwalker.engine.startup.DungeonWalkerEngine</mainClass>
                        <ports>
                            <port>8081</port>
                        </ports>
                        <jvmFlags>
                            <jvmFlag>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</jvmFlag>
                        </jvmFlags>
                    </container>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
